--- a/pages/la_jolla.html
+++ b/pages/la_jolla.html
@@ -2,135 +2,141 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Hidden San Diego Free Resource for San Diego's best hiking trails">
-    <meta name="keywords" content="La Jolla,hiking san diego county,Hidden San Diego,trails,san diego hiking adventures,hiking near san diego ca">
-    <title>La Jolla</title>
-    <!--so all browsers will work with html5 -->
-    <!--[if lt IE 9]>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="Hidden San Diego Free Resource for San Diego's best hiking trails">
+	<meta name="keywords" content="La Jolla,hiking san diego county,Hidden San Diego,trails,san diego hiking adventures,hiking near san diego ca">
+	<title>La Jolla</title>
+	<!--so all browsers will work with html5 -->
+	<!--[if lt IE 9]>
         <script src="scripts/html5shiv.js"></script>
     <![endif]-->
-    <!--enable older versions of IE to understand media queries -->
-    <script src="scripts/respond.js"></script>
-    <link href="../css/main.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="../scripts/search.js"></script>
+	<!--enable older versions of IE to understand media queries -->
+	<script src="scripts/respond.js"></script>
+	<link href="../css/main.css" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="../scripts/search.js"></script>
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <a href="../index.html" class="logo"><img src="../images/Logo_f.svg" alt="Hidden San Diego Logo"></a>
-            <h1>Hidden San Diego</h1>
-            <h2>Hikes Resources</h2>
-            <div id="mainNav">
-                <input type="checkbox" id="toggle" />
-                <label for="toggle">Menu</label>
-                <nav class="navigation">
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../pages/about.html">About</a></li>
-                        <li>
-                            <a class="main-item" href="../pages/hiking.html">Hiking +</a>
-                            <ul class="sub-menu">
-                                <li><a href="../pages/best_hikes.html">Best Hikes</a></li>
-                                <li><a class="main-item" href="../pages/places.html">Places +</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="../pages/gallery.html">Gallery</a></li>
-                                        <li><a href="../pages/other_places.html">Other Places</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="../pages/review.html">Reviews</a></li>
-                                <li><a href="../pages/news.html">News</a></li>
-                                <li><a href="../pages/tips.html">Tips</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="main-item" href="../pages/join_us.html">Join Us +</a>
-                            <ul class="sub-menu">
-                                <li><a href="../pages/gift.html">Take Your Gift</a></li>
-                                <li><a href="../pages/donation.html">Donation</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="../pages/contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <section>
-            <div class="onLeftContent">
-                <h2>La Jolla Natural Park </h2>
-                <figure class="Center">
-                    <img src="../images/pages/la_jolla.jpg" alt="pottery canyon">
-                    <figcaption>Pottery Canyon</figcaption>
-                </figure>
-                <div class="clearIt"></div>
-                <article id="mainContentTwo">
-                    <h4>Pottery Canyon</h4>
-                    <p>This sort of adventure you can explore enroute to something else. It doesn't require packing up a backpack, water for the day or sunscreen.</p>
-                    <p> It also doesn't require a tank of gas or a Thomas Bros. guide. It does require you to stop and take notice, listen to the silence, check out a piece of of history, appreciate a gem amidst the urban sprawl and then get on with whatever you've got going.</p>
-                    <p>This "tip" is good for anyone with small children whom you'd like to introduce to trails and basic natural environments.</p>
-                    <p>Just off La Jolla Parkway which runs into La Jolla, make a right turn on Torrey Pines Road. At the first major signal, make a quick and hard right turn on Pottery Canyon Driveway. </p>
-                    <p>Drive slowly onto the property. Follow the paved road until you arrive at the small dirt parking area. Look carefully along the way because you might find some four-legged friends you'd least expect to see in La Jolla. No, we can't give it away. We take the 5th. </p>
-                    <p>In 2012, construction has been underway for new digs on the property. </p>
-                    <p>You have entered a special place of 18.8 acres of public open space with towering eucalyptus trees. You'll see the private home of some "lucky duck" who shares access to the property. </p>
-                    <p>The canyon trail is very short at 1/5th-mile. That is not a 'typo'. The tiny trail is only 1/5th-mile. Maybe it isn't suitable for the Siera Club Master Hike Committee, but it is perfect for children or for pulling off the beaten path once in awhile and getting a quick injection of nature.</p>
-                    <p> It is long enough to step off from the world. It is short enough and close enough to city life to do it often.
-                    </p>
-                    <p>In 1928, two brothers from Jalisco, Mexico migrated to the U.S. to look for a place that they could use for pottery making. </p>
-                    <p>They found what San Diegans know so very well today, the San Diego soil is rich with clay. Good for pottery. Bad for modern day landscaping.</p>
-                    <p>The guys bought the property, built their homes and developed a thriving business known as the La Jolla Canyon Clay Products Company.
-                        <p> Look at the rooftops of many of the old Spanish-style buildings in San Diego and you'd be safe to assume these guys produced some of the red clay tiles.</p>
-                        <p> For over 20 years, their hands created handmade roof and floor tiles, adobe and other clay products. They stayed in the canyon for the remainder of their lives.</p>
-                        <p>Pottery Canyon received San Diego Historic Landmark designation back in 1976. To see some neat old photos, you'll need to follow us!</p>
-                        <h4>Personal Experience</h4>
-                        <p> Go for the history, not for an amazing hike. Go in the springtime (which I did not) and I can guarantee it to be green and flowery (I saw the dying nastursiums so I know it gets pretty during this time). </p>
-                        <p>It is very quiet and isolated out here so if you want peace and quiet, this is a good place to go.</p>
-                        <h4>Other great hikes in San Diego</h4>
-                        <p><a href="../pages/torry_pines.html">Torrey Pines State Reserve >></a> </p>
-                        <p><a href="../pages/adobe_falls.html">Adobe Falls >></a>
-                        </p>
-                </article>
-            </div>
-            <div class="clearIt"></div>
-            <aside class="two">
-                <h3>Stay Connected</h3>
-                <p>Subscribe to our monthly newsletter for useful tips and valuable information</p>
-                <form action="post" method="post" id="contactForm">
-                    <fieldset id="getInTouch" title="Get in touch">
-                        <legend>Get in touch</legend>
-                        <ol>
-                            <li>
-                                <label for="name">name</label>
-                                <input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First" autofocus required /> <span class="require">*</span>
-                            </li>
-                            <li>
-                                <label for="email">email </label>
-                                <input type="email" id="email" title="Please enter your email address" placeholder="name@url.com" required /> <span class="require">*</span>
-                            </li>
-                        </ol>
-                    </fieldset>
-                    <button type="submit">Subscribe</button>
-                </form>
-                <div class="adbox">
-                    <h3>Advertisement</h3>
-                    <p>Interested in advertising with us?</p>
-                    <img src="../images/bluehost.png" alt="ad1">
-                    <h3>$5.95/mo</h3>
-                </div>
-            </aside>
-            <div class="search searchTwo">
-                <gcse:search></gcse:search>
-            </div>
-        </section>
-        <footer>
-            <p>&copy; 2016 Hidden San Diego</p>
-            <div id="social">
-                <a href="http://twitter.com"><img src="../images/icons/webicon-twitter.svg" alt="Twitter"></a>
-                <a href="http://facebook.com"><img src="../images/icons/webicon-facebook.svg" alt="Facebook"></a>
-                <a href="http://tumblr.com"><img src="../images/icons/webicon-tumblr.svg" alt="Tumbler"></a>
-            </div>
-        </footer>
-    </div>
+	<div class="container">
+		<div class="topnav" id="myTopnav">
+
+			<a href="../index.html" class="active">Home</a>
+
+			<div class="dropdown">
+				<button class="dropbtn"><a href="../pages/about.html">About <i class="fa fa-caret-down"></i></a>
+
+				</button>
+				<div class="dropdown-content">
+					<a href="../pages/news.html">News</a>
+
+				</div>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn"><a href="../pages/hiking.html">Hiking <i class="fa fa-caret-down"></i></a>
+				</button>
+				<div class="dropdown-content">
+					<a href="../pages/best_hikes.html">Best Hikes</a>
+					<a href="../pages/tips.html">Tips</a>
+				</div>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn"><a href="../pages/places.html">Places <i class="fa fa-caret-down"></i></a>
+				</button>
+				<div class="dropdown-content">
+					<a href="../pages/gallery.html">Gallery</a>
+					<a href="../pages/other_places.html">Other Places</a>
+					<a href="../pages/review.html">Reviews</a>
+				</div>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn"><a href="../pages/contact.html">Contact <i class="fa fa-caret-down"></i></a>
+				</button>
+				<div class="dropdown-content">
+					<a href="../pages/join_us.html">Join Us</a>
+					<a href="../pages/gift.html">Take Your Gift</a>
+					<a href="../pages/donation.html">Donation</a>
+				</div>
+			</div>
+
+			<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+		</div>
+
+		<header>
+			<a href="../index.html" class="logo"><img src="../images/Logo_f.svg" alt="Hidden San Diego Logo"></a>
+			<h1>Hidden San Diego</h1>
+			<h2>Hikes Resources</h2>
+		</header>
+		<section>
+			<div class="onLeftContent">
+				<h2>La Jolla Natural Park </h2>
+				<figure class="Center">
+					<img src="../images/pages/la_jolla.jpg" alt="pottery canyon">
+					<figcaption>Pottery Canyon</figcaption>
+				</figure>
+				<div class="clearIt"></div>
+				<article id="mainContentTwo">
+					<h4>Pottery Canyon</h4>
+					<p>This sort of adventure you can explore enroute to something else. It doesn't require packing up a backpack, water for the day or sunscreen.</p>
+					<p> It also doesn't require a tank of gas or a Thomas Bros. guide. It does require you to stop and take notice, listen to the silence, check out a piece of of history, appreciate a gem amidst the urban sprawl and then get on with whatever you've got going.</p>
+					<p>This "tip" is good for anyone with small children whom you'd like to introduce to trails and basic natural environments.</p>
+					<p>Just off La Jolla Parkway which runs into La Jolla, make a right turn on Torrey Pines Road. At the first major signal, make a quick and hard right turn on Pottery Canyon Driveway. </p>
+					<p>Drive slowly onto the property. Follow the paved road until you arrive at the small dirt parking area. Look carefully along the way because you might find some four-legged friends you'd least expect to see in La Jolla. No, we can't give it away. We take the 5th. </p>
+					<p>In 2012, construction has been underway for new digs on the property. </p>
+					<p>You have entered a special place of 18.8 acres of public open space with towering eucalyptus trees. You'll see the private home of some "lucky duck" who shares access to the property. </p>
+					<p>The canyon trail is very short at 1/5th-mile. That is not a 'typo'. The tiny trail is only 1/5th-mile. Maybe it isn't suitable for the Siera Club Master Hike Committee, but it is perfect for children or for pulling off the beaten path once in awhile and getting a quick injection of nature.</p>
+					<p> It is long enough to step off from the world. It is short enough and close enough to city life to do it often.
+					</p>
+					<p>In 1928, two brothers from Jalisco, Mexico migrated to the U.S. to look for a place that they could use for pottery making. </p>
+					<p>They found what San Diegans know so very well today, the San Diego soil is rich with clay. Good for pottery. Bad for modern day landscaping.</p>
+					<p>The guys bought the property, built their homes and developed a thriving business known as the La Jolla Canyon Clay Products Company.
+						<p> Look at the rooftops of many of the old Spanish-style buildings in San Diego and you'd be safe to assume these guys produced some of the red clay tiles.</p>
+						<p> For over 20 years, their hands created handmade roof and floor tiles, adobe and other clay products. They stayed in the canyon for the remainder of their lives.</p>
+						<p>Pottery Canyon received San Diego Historic Landmark designation back in 1976. To see some neat old photos, you'll need to follow us!</p>
+						<h4>Personal Experience</h4>
+						<p> Go for the history, not for an amazing hike. Go in the springtime (which I did not) and I can guarantee it to be green and flowery (I saw the dying nastursiums so I know it gets pretty during this time). </p>
+						<p>It is very quiet and isolated out here so if you want peace and quiet, this is a good place to go.</p>
+						<h4>Other great hikes in San Diego</h4>
+						<p><a href="../pages/torry_pines.html">Torrey Pines State Reserve >></a> </p>
+						<p><a href="../pages/adobe_falls.html">Adobe Falls >></a>
+						</p>
+				</article>
+			</div>
+			<div class="clearIt"></div>
+			<aside class="two">
+				<h3>Stay Connected</h3>
+				<p>Subscribe to our monthly newsletter for useful tips and valuable information</p>
+				<form action="post" method="post" id="contactForm">
+					<fieldset id="getInTouch" title="Get in touch">
+						<legend>Get in touch</legend>
+						<ol>
+							<li>
+								<label for="name">name</label>
+								<input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First" required /> <span class="require">*</span>
+							</li>
+							<li>
+								<label for="email">email </label>
+								<input type="email" id="email" title="Please enter your email address" placeholder="name@url.com" required /> <span class="require">*</span>
+							</li>
+						</ol>
+					</fieldset>
+					<button type="submit">Subscribe</button>
+				</form>
+
+			</aside>
+			<div class="search searchTwo">
+				<gcse:search></gcse:search>
+			</div>
+		</section>
+		<footer>
+			<p>&copy; 2016 Hidden San Diego</p>
+			<div id="social">
+				<a href="http://twitter.com"><img src="../images/icons/webicon-twitter.svg" alt="Twitter"></a>
+				<a href="http://facebook.com"><img src="../images/icons/webicon-facebook.svg" alt="Facebook"></a>
+				<a href="http://tumblr.com"><img src="../images/icons/webicon-tumblr.svg" alt="Tumbler"></a>
+			</div>
+		</footer>
+	</div>
 </body>
 
 </html>
