--- a/pages/join_us.html
+++ b/pages/join_us.html
@@ -2,188 +2,194 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Hidden San Diego Free Resource for San Diego's best hiking trails">
-    <meta name="keywords" content="hiking san diego county,Hidden San Diego,trails,san diego hiking adventures,hiking near san diego ca">
-    <title>Join Us</title>
-    <!--so all browsers will work with html5 -->
-    <!--[if lt IE 9]>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="Hidden San Diego Free Resource for San Diego's best hiking trails">
+	<meta name="keywords" content="hiking san diego county,Hidden San Diego,trails,san diego hiking adventures,hiking near san diego ca">
+	<title>Join Us</title>
+	<!--so all browsers will work with html5 -->
+	<!--[if lt IE 9]>
         <script src="scripts/html5shiv.js"></script>
     <![endif]-->
-    <!--enable older versions of IE to understand media queries -->
-    <script src="scripts/respond.js"></script>
-    <link href="../css/main.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="../scripts/search.js"></script>
+	<!--enable older versions of IE to understand media queries -->
+	<script src="scripts/respond.js"></script>
+	<link href="../css/main.css" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="../scripts/search.js"></script>
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <a href="../index.html" class="logo"><img src="../images/Logo_f.svg" alt="Hidden San Diego Logo"></a>
-            <h1>Hidden San Diego</h1>
-            <h2>Hikes Resources</h2>
-            <div id="mainNav">
-                <input type="checkbox" id="toggle" />
-                <label for="toggle">Menu</label>
-                <nav class="navigation">
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../pages/about.html">About</a></li>
-                        <li>
-                            <a class="main-item" href="../pages/hiking.html">Hiking +</a>
-                            <ul class="sub-menu">
-                                <li><a href="../pages/best_hikes.html">Best Hikes</a></li>
-                                <li><a class="main-item" href="../pages/places.html">Places +</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="../pages/gallery.html">Gallery</a></li>
-                                        <li><a href="../pages/other_places.html">Other Places</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="../pages/review.html">Reviews</a></li>
-                                <li><a href="../pages/news.html">News</a></li>
-                                <li><a href="../pages/tips.html">Tips</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="main-item" href="../pages/join_us.html">Join Us +</a>
-                            <ul class="sub-menu">
-                                <li><a href="../pages/gift.html">Take Your Gift</a></li>
-                                <li><a href="../pages/donation.html">Donation</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="../pages/contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <section>
-            <div class="onLeftContent">
-                <h2>Join Us</h2>
-                <div class="clearIt"></div>
-                <section id="joinUs">
-                    <h4>Become a Member</h4>
-                    <p>If you are interested in becoming a member at Hidden San Diego, please fill out a Membership Inquiry Form (below).</p>
-                    <form action="post" method="post" id="contactForm">
-                        <fieldset id="getInTouch" title="Get in touch">
-                            <!-- fieldset and legend-->
-                            <legend>Become a Member</legend>
-                            <ol>
-                                <!-- 4 text boxes -->
-                                <li>
-                                    <label for="name">Name</label>
-                                    <input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First" autofocus required /> <span class="require">*</span>
-                                </li>
-                                <li>
-                                    <label for="email">Email</label>
-                                    <input type="email" id="email" title="Please enter your email address" placeholder="name@url.com" required /> <span class="require">*</span>
-                                </li>
-                                <li>
-                                    <label for="url">Website</label>
-                                    <input type="url" id="url" placeholder="http://www.yourwebsite.com" title="web address" />
-                                </li>
-                                <li>
-                                    <label for="tel">Phone</label>
-                                    <input type="tel" id="tel" placeholder="000-000-0000" />
-                                </li>
-                            </ol>
-                        </fieldset>
-                        <fieldset>
-                            <!-- drop down menu -->
-                            <ul>
-                                <li class="altLabel">
-                                    <label for="reference">How did you find us?</label>
-                                    <select id="reference">
-                                        <option hidden>Choose</option>
-                                        <option value="friend">A friend</option>
-                                        <option value="fb">FaceBook</option>
-                                        <option value="twitter">Twitter</option>
-                                        <option value="yelp">Yelp</option>
-                                        <option value="other">Other</option>
-                                    </select>
-                                </li>
-                            </ul>
-                            <!-- list box-->
-                            <ul>
-                                <li class="altLabelList">
-                                    <label for="reference">What updates would you like receive? </label>
-                                    <select name="information" class="boxList" multiple>
-                                        <option value="news">Our News</option>
-                                        <option value="events">Our Events</option>
-                                        <option value="reviews">New Articles</option>
-                                        <option value="audi">New Reviews</option>
-                                    </select>
-                                    <h6>Hold down the Ctrl (windows) / Command (Mac) button to select multiple options.</h6>
-                                </li>
-                            </ul>
-                            <!-- checkbox -->
-                            <ul>
-                                <li class="altLabel">
-                                    <label for="reference">How would you like to be contacted:</label>
-                                    <ul class="checkBox">
-                                        <li>
-                                            <input type="checkbox" name="preference" id="idc" value="idc" /> Email</li>
-                                        <li>
-                                            <input type="checkbox" name="noPreference" id="likeAll" value="likeAll" /> Phone</li>
-                                        <li>
-                                            <input type="checkbox" name="noPreference" id="likeAll2" value="likeAll2" /> Text Message </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </fieldset>
-                        <fieldset id="comments" title="Comments">
-                            <legend>Comments / Questions</legend>
-                            <!-- radio buttons -->
-                            <ul>
-                                <li>
-                                    <div class="groupHeadline">Request Type</div>
-                                    <ul class="altLabel radioSet">
-                                        <li>
-                                            <input type="radio" value="question" id="questionItem" name="requestType" />
-                                            <label for="questionItem" class="rBtnLabels">Question</label>
-                                        </li>
+	<div class="container">
+		<div class="topnav" id="myTopnav">
 
-                                        <li>
-                                            <input type="radio" value="comment" id="commentItem" name="requestType" />
-                                            <label for="commentItem" class="rBtnLabels">Comment</label>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <label for="inquiry"></label>
-                                    <textarea id="inquiry" placeholder="Your comment or question:"></textarea>
-                                </li>
-                            </ul>
-                        </fieldset>
-                        <button type="submit">Send</button>
-                        <div class="clearIt"></div>
-                        <p class="readMore gift"><a href="../pages/gift.html">Take Your Gift</a><a href="https://www.paypal.com">Make Donation</a>
-                        </p>
-                    </form>
-                </section>
-            </div>
-            <div class="clearIt"></div>
-            <aside class="places">
+			<a href="../index.html" class="active">Home</a>
 
-                <div class="adbox">
-                    <h3>Advertisement</h3>
-                    <p>Interested in advertising with us?</p>
-                    <img src="../images/bluehost.png" alt="ad1">
-                    <h3>$5.95/mo</h3>
-                </div>
-            </aside>
-            <div class="search searchTwo">
-                <gcse:search></gcse:search>
-            </div>
-        </section>
-        <footer>
-            <p>&copy; 2016 Hidden San Diego</p>
-            <div id="social">
-                <a href="http://twitter.com"><img src="../images/icons/webicon-twitter.svg" alt="Twitter"></a>
-                <a href="http://facebook.com"><img src="../images/icons/webicon-facebook.svg" alt="Facebook"></a>
-                <a href="http://tumblr.com"><img src="../images/icons/webicon-tumblr.svg" alt="Tumbler"></a>
-            </div>
-        </footer>
-    </div>
+			<div class="dropdown">
+				<button class="dropbtn"><a href="../pages/about.html">About <i class="fa fa-caret-down"></i></a>
+
+				</button>
+				<div class="dropdown-content">
+					<a href="../pages/news.html">News</a>
+
+				</div>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn"><a href="../pages/hiking.html">Hiking <i class="fa fa-caret-down"></i></a>
+				</button>
+				<div class="dropdown-content">
+					<a href="../pages/best_hikes.html">Best Hikes</a>
+					<a href="../pages/tips.html">Tips</a>
+				</div>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn"><a href="../pages/places.html">Places <i class="fa fa-caret-down"></i></a>
+				</button>
+				<div class="dropdown-content">
+					<a href="../pages/gallery.html">Gallery</a>
+					<a href="../pages/other_places.html">Other Places</a>
+					<a href="../pages/review.html">Reviews</a>
+				</div>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn"><a href="../pages/contact.html">Contact <i class="fa fa-caret-down"></i></a>
+				</button>
+				<div class="dropdown-content">
+					<a href="../pages/join_us.html">Join Us</a>
+					<a href="../pages/gift.html">Take Your Gift</a>
+					<a href="../pages/donation.html">Donation</a>
+				</div>
+			</div>
+
+			<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+		</div>
+
+		<header>
+			<a href="../index.html" class="logo"><img src="../images/Logo_f.svg" alt="Hidden San Diego Logo"></a>
+			<h1>Hidden San Diego</h1>
+			<h2>Hikes Resources</h2>
+		</header>
+		<section>
+			<div class="onLeftContent">
+				<h2>Join Us</h2>
+				<div class="clearIt"></div>
+				<section id="joinUs">
+					<h4>Become a Member</h4>
+					<p>If you are interested in becoming a member at Hidden San Diego, please fill out a Membership Inquiry Form (below).</p>
+					<form action="post" method="post" id="contactForm">
+						<fieldset id="getInTouch" title="Get in touch">
+							<!-- fieldset and legend-->
+							<legend>Become a Member</legend>
+							<ol>
+								<!-- 4 text boxes -->
+								<li>
+									<label for="name">Name</label>
+									<input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First"  required /> <span class="require">*</span>
+								</li>
+								<li>
+									<label for="email">Email</label>
+									<input type="email" id="email" title="Please enter your email address" placeholder="name@url.com" required /> <span class="require">*</span>
+								</li>
+								<li>
+									<label for="url">Website</label>
+									<input type="url" id="url" placeholder="http://www.yourwebsite.com" title="web address" />
+								</li>
+								<li>
+									<label for="tel">Phone</label>
+									<input type="tel" id="tel" placeholder="000-000-0000" />
+								</li>
+							</ol>
+						</fieldset>
+						<fieldset>
+							<!-- drop down menu -->
+							<ul>
+								<li class="altLabel">
+									<label for="reference">How did you find us?</label>
+									<select id="reference">
+										<option hidden>Choose</option>
+										<option value="friend">A friend</option>
+										<option value="fb">FaceBook</option>
+										<option value="twitter">Twitter</option>
+										<option value="yelp">Yelp</option>
+										<option value="other">Other</option>
+									</select>
+								</li>
+							</ul>
+							<!-- list box-->
+							<ul>
+								<li class="altLabelList">
+									<label for="reference">What updates would you like receive? </label>
+									<select name="information" class="boxList" multiple>
+										<option value="news">Our News</option>
+										<option value="events">Our Events</option>
+										<option value="reviews">New Articles</option>
+										<option value="audi">New Reviews</option>
+									</select>
+									<h6>Hold down the Ctrl (windows) / Command (Mac) button to select multiple options.</h6>
+								</li>
+							</ul>
+							<!-- checkbox -->
+							<ul>
+								<li class="altLabel">
+									<label for="reference">How would you like to be contacted:</label>
+									<ul class="checkBox">
+										<li>
+											<input type="checkbox" name="preference" id="idc" value="idc" /> Email</li>
+										<li>
+											<input type="checkbox" name="noPreference" id="likeAll" value="likeAll" /> Phone</li>
+										<li>
+											<input type="checkbox" name="noPreference" id="likeAll2" value="likeAll2" /> Text Message </li>
+									</ul>
+								</li>
+							</ul>
+						</fieldset>
+						<fieldset id="comments" title="Comments">
+							<legend>Comments / Questions</legend>
+							<!-- radio buttons -->
+							<ul>
+								<li>
+									<div class="groupHeadline">Request Type</div>
+									<ul class="altLabel radioSet">
+										<li>
+											<input type="radio" value="question" id="questionItem" name="requestType" />
+											<label for="questionItem" class="rBtnLabels">Question</label>
+										</li>
+
+										<li>
+											<input type="radio" value="comment" id="commentItem" name="requestType" />
+											<label for="commentItem" class="rBtnLabels">Comment</label>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<label for="inquiry"></label>
+									<textarea id="inquiry" placeholder="Your comment or question:"></textarea>
+								</li>
+							</ul>
+						</fieldset>
+						<button type="submit">Send</button>
+						<div class="clearIt"></div>
+						<p class="readMore gift"><a href="../pages/gift.html">Take Your Gift</a><a href="https://www.paypal.com">Make Donation</a>
+						</p>
+					</form>
+				</section>
+			</div>
+			<div class="clearIt"></div>
+			<aside class="places">
+
+				
+			</aside>
+			<div class="search searchTwo">
+				<gcse:search></gcse:search>
+			</div>
+		</section>
+		<footer>
+			<p>&copy; 2016 Hidden San Diego</p>
+			<div id="social">
+				<a href="http://twitter.com"><img src="../images/icons/webicon-twitter.svg" alt="Twitter"></a>
+				<a href="http://facebook.com"><img src="../images/icons/webicon-facebook.svg" alt="Facebook"></a>
+				<a href="http://tumblr.com"><img src="../images/icons/webicon-tumblr.svg" alt="Tumbler"></a>
+			</div>
+		</footer>
+	</div>
 </body>
 
 </html>
